force-app/main/default/objects/Bid__c/fields/Above_Asking__c.field-meta.xml
<CustomField>
    <fullName>Above_Asking__c</fullName>
    <formula>( Offered_Price__c - Piece__r.Asking_Price__c)/Piece__r.Asking_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Above Asking</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>