force-app/main/default/objects/Bid__c/fields/Buyer_State__c.field-meta.xml
<CustomField>
    <fullName>Buyer_State__c</fullName>
    <formula>Buyer__r.ShippingState</formula>
    <label>Buyer State</label>
    <type>Text</type>
</CustomField>