force-app/main/default/objects/Bid__c/fields/Offered_Price__c.field-meta.xml
<CustomField>
    <fullName>Offered_Price__c</fullName>
    <label>Offered Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>