force-app/main/default/objects/Bid__c/fields/Piece__c.field-meta.xml
<CustomField>
    <fullName>Piece__c</fullName>
    <label>Piece</label>
    <referenceTo>Piece__c</referenceTo>
    <relationshipLabel>Bids</relationshipLabel>
    <relationshipName>Bids</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>